{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 22,
  "lineage": "176380f7-baec-38b9-5a73-d22a0168eca4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:internet-gateway/igw-003d511b38bb8c866",
            "id": "igw-003d511b38bb8c866",
            "owner_id": "658509158263",
            "tags": {
              "Name": "Prime-igw"
            },
            "tags_all": {
              "Name": "Prime-igw"
            },
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prime-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:route-table/rtb-0eeeb39fadd5d25ff",
            "id": "rtb-0eeeb39fadd5d25ff",
            "owner_id": "658509158263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003d511b38bb8c866",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prime-pub-route-table"
            },
            "tags_all": {
              "Name": "Prime-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Prime-igw",
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:route-table/rtb-02a5b15b2f89459b8",
            "id": "rtb-02a5b15b2f89459b8",
            "owner_id": "658509158263",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route-table"
            },
            "tags_all": {
              "Name": "prime-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a442c1cbb4502ab",
            "route_table_id": "rtb-02a5b15b2f89459b8",
            "subnet_id": "subnet-00b1107a686378a5b"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.Prime-private1",
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ae85bfbcc8be20",
            "route_table_id": "rtb-02a5b15b2f89459b8",
            "subnet_id": "subnet-0e83df0f0144fd441"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.Prime-private2",
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec59fc9d1782743",
            "route_table_id": "rtb-0eeeb39fadd5d25ff",
            "subnet_id": "subnet-0e0f83b117c0ac23b"
          },
          "dependencies": [
            "aws_internet_gateway.Prime-igw",
            "aws_route_table.Prime-pub-route-table",
            "aws_subnet.Prime-pub1",
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ed1612c85af7beb",
            "route_table_id": "rtb-0eeeb39fadd5d25ff",
            "subnet_id": "subnet-0671fa73d867e13ec"
          },
          "dependencies": [
            "aws_internet_gateway.Prime-igw",
            "aws_route_table.Prime-pub-route-table",
            "aws_subnet.Prime-pub2",
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:subnet/subnet-00b1107a686378a5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1107a686378a5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658509158263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prime-private1"
            },
            "tags_all": {
              "Name": "Prime-private1"
            },
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:subnet/subnet-0e83df0f0144fd441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e83df0f0144fd441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658509158263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prime-private2"
            },
            "tags_all": {
              "Name": "Prime-private2"
            },
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:subnet/subnet-0e0f83b117c0ac23b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0f83b117c0ac23b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658509158263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prime-pub1"
            },
            "tags_all": {
              "Name": "Prime-pub1"
            },
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:subnet/subnet-0671fa73d867e13ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671fa73d867e13ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658509158263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prime-pub2"
            },
            "tags_all": {
              "Name": "Prime-pub2"
            },
            "vpc_id": "vpc-086cf21b3e12f313a"
          },
          "dependencies": [
            "aws_vpc.Prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658509158263:vpc/vpc-086cf21b3e12f313a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f50df86fb0d9fde",
            "default_route_table_id": "rtb-086b2cf9f8b3e25d6",
            "default_security_group_id": "sg-09362462355c0c42d",
            "dhcp_options_id": "dopt-0e337b786fdfb10f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086cf21b3e12f313a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086b2cf9f8b3e25d6",
            "owner_id": "658509158263",
            "tags": {
              "Name": "Prime"
            },
            "tags_all": {
              "Name": "Prime"
            }
          }
        }
      ]
    }
  ]
}